...
                                <rect key="frame" x="165" y="420.66666666666669" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="3JX-nC-Tbx"/>
                                    <constraint firstAttribute="width" constant="60" id="FkK-4t-zLP"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sPR-za-EFC" userLabel="Authenticate">
                                <rect key="frame" x="16" y="638" width="358" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="s4k-2O-2T6"/>
                                </constraints>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ni-9A-JXp" userLabel="BackButton">
                                <rect key="frame" x="16" y="106" width="78" height="24"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Button" image="nav_back_button"/>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tdk-cq-fxQ" userLabel="Like button">
                                                    <rect key="frame" x="332" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <color key="tintColor" red="0.82599914969999999" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_on"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="tsS-vP-g1Y" eventType="touchUpInside" id="g9h-KG-Mdl"/>
                                                    </connections>
...
                                <connections>
                                    <outlet property="delegate" destination="lgK-F7-69N" id="DGt-nE-gyg"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3fa-HH-Z5p" userLabel="Back Button">
                                <rect key="frame" x="8" y="55" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="back button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="5nL-fm-UQd"/>
                                    <constraint firstAttribute="width" constant="48" id="c4c-hn-5bz"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
